# storage/api-docs/api-docs.json
@@ -380,6 +380,58 @@
                     }
                 }
             }
+        },
+        "/users/": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get all users",
+                "description": "Return collection of users",
+                "operationId": "getAllUsers",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/users/{usersId}": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Find user by Id",
+                "description": "Returns a single user",
+                "operationId": "getUserById",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "usersId",
+                        "in": "path",
+                        "description": "ID of user to return",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Proceeding not found"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -432,6 +484,10 @@
                 "description": "Find out more about our store",
                 "url": "http://swagger.io"
             }
+        },
+        {
+            "name": "institutions",
+            "description": "All institutions operations"
         }
     ]
 }
